--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "nightwatch",
     "index.js",
     "vite.config.js",
+    "LICENSE",
+    "README.md"
   ],
   "license": "MIT",
   "dependencies": {
