--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@vitejs/plugin-react": "^1.2.0",
-    "vite": "^2.8.0",
-    "vite-plugin-nightwatch": "^0.2.12"
+    "@vitejs/plugin-react": "^1.3.2",
+    "get-port": "^5.1.1",
+    "vite": "^2.9.14",
+    "vite-plugin-nightwatch": "^0.3.0-dev"
   },
   "peerDependencies": {
-    "nightwatch": "^2.0.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "nightwatch": "^2.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "chromedriver": "^103.0.0",
     "nightwatch": "latest",
-    "chromedriver": "^98.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
