--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@vitejs/plugin-react": "^1.3.2",
+    "@vitejs/plugin-react": "^2.1.0",
+    "assertion-error": "^2.0.0",
     "get-port": "^5.1.1",
-    "vite": "^2.9.14",
-    "vite-plugin-nightwatch": "^0.3.0-dev"
+    "vite": "^3.1.3",
+    "@nightwatch/esbuild-utils": "0.1.8",
+    "vite-plugin-nightwatch": "0.3.0-preview.1"
   },
   "devDependencies": {
     "chromedriver": "^103.0.0",
-    "nightwatch": "latest",
+    "nightwatch": "2.3.9-dev1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
