--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@nightwatch/esbuild-utils": "0.1.8",
     "@vitejs/plugin-react": "^2.1.0",
     "assertion-error": "^2.0.0",
     "get-port": "^5.1.1",
     "vite": "^3.1.3",
-    "@nightwatch/esbuild-utils": "0.1.8",
-    "vite-plugin-nightwatch": "0.3.0-preview.1"
+    "vite-plugin-nightwatch": "0.3.0"
   },
   "devDependencies": {
-    "chromedriver": "^103.0.0",
-    "nightwatch": "2.3.9-dev1",
+    "chromedriver": "^106.0.1",
+    "nightwatch": "^2.4.0-preview.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
