--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nightwatch/react",
-  "version": "0.2.0-preview.3",
+  "version": "0.3.0",
   "description": "Nightwatch plugin which adds support for React component testing using the Vite dev server. Requires Nightwatch 2.0+",
   "main": "index.js",
   "scripts": {
