--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "LICENSE",
     "README.md"
   ],
+  "homepage": "https://nightwatchjs.org",
   "license": "MIT",
   "dependencies": {
     "@nightwatch/esbuild-utils": "0.1.8",
@@ -25,7 +26,7 @@
     "assertion-error": "^2.0.0",
     "get-port": "^5.1.1",
     "vite": "^3.1.3",
-    "vite-plugin-nightwatch": "0.3.0"
+    "vite-plugin-nightwatch": "0.3.1"
   },
   "devDependencies": {
     "chromedriver": "^106.0.1",
