--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
   "homepage": "https://nightwatchjs.org",
   "license": "MIT",
   "dependencies": {
-    "@nightwatch/esbuild-utils": "0.1.10",
-    "@vitejs/plugin-react": "^2.1.0",
+    "@nightwatch/esbuild-utils": "^0.2.0",
+    "@vitejs/plugin-react": "^3.0.1",
     "assertion-error": "^2.0.0",
     "get-port": "^5.1.1",
     "jsdom": "^20.0.2",
     "rimraf": "^3.0.2",
-    "vite": "^3.1.3",
-    "vite-plugin-nightwatch": "0.3.2"
+    "vite": "^4.0.4",
+    "vite-plugin-nightwatch": "0.4.0"
   },
   "devDependencies": {
     "chromedriver": "^107.0.3",
