--- a/package.json
+++ b/package.json
@@ -21,20 +21,23 @@
   ],
   "homepage": "https://nightwatchjs.org",
   "license": "MIT",
-  "dependencies": {
-    "@nightwatch/esbuild-utils": "^0.2.0",
+  "peerDependencies": {
+    "vite": "^4.0.4",
     "@vitejs/plugin-react": "^3.0.1",
+    "nightwatch": "^2.6.10"
+  },
+  "dependencies": {
+    "@nightwatch/esbuild-utils": "^0.2.1",
     "assertion-error": "^2.0.0",
     "get-port": "^5.1.1",
     "jsdom": "^20.0.2",
     "rimraf": "^3.0.2",
-    "vite": "^4.0.4",
     "vite-plugin-nightwatch": "0.4.0"
   },
   "devDependencies": {
     "chromedriver": "^108.0.0",
     "eslint": "^8.26.0",
-    "nightwatch": "^2.5.0",
+    "nightwatch": "^2.6.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
