--- a/package.json
+++ b/package.json
@@ -21,26 +21,28 @@
   ],
   "homepage": "https://nightwatchjs.org",
   "license": "MIT",
+  "types": "index.d.ts",
   "peerDependencies": {
-    "vite": "^4.0.4",
+    "@types/nightwatch": "^2.3.22",
     "@vitejs/plugin-react": "^3.0.1",
-    "nightwatch": "^2.6.10"
+    "nightwatch": "^2.6.10",
+    "vite": "^4.0.4"
   },
   "dependencies": {
     "@nightwatch/esbuild-utils": "^0.2.1",
     "assertion-error": "^2.0.0",
-    "get-port": "^5.1.1",
-    "jsdom": "^20.0.2",
-    "rimraf": "^3.0.2",
+    "get-port": "^6.1.2",
+    "jsdom": "^21.1.1",
+    "rimraf": "^4.4.0",
     "vite-plugin-nightwatch": "0.4.2"
   },
   "devDependencies": {
-    "chromedriver": "^108.0.0",
-    "eslint": "^8.26.0",
-    "nightwatch": "^2.6.10",
+    "@vitejs/plugin-react": "^3.1.0",
+    "chromedriver": "^111.0.0",
+    "eslint": "^8.36.0",
+    "nightwatch": "^2.6.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vite": "^4.0.4",
-    "@vitejs/plugin-react": "^3.0.1"
+    "vite": "^4.2.1"
   }
 }
