--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "get-port": "^5.1.1",
     "jsdom": "^20.0.2",
     "rimraf": "^3.0.2",
-    "vite-plugin-nightwatch": "0.4.2"
+    "vite-plugin-nightwatch": "0.4.5"
   },
   "devDependencies": {
     "eslint": "^8.26.0",
-    "nightwatch": "3.0.0-beta.1",
+    "nightwatch": "3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite": "^4.0.4",
