--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   "homepage": "https://nightwatchjs.org",
   "license": "MIT",
   "peerDependencies": {
-    "vite": "^4.0.4",
     "@vitejs/plugin-react": "^4.0.4",
-    "nightwatch": "^3.1.0"
+    "nightwatch": "^3.1.0",
+    "vite": "^4.0.4"
   },
   "dependencies": {
     "@nightwatch/esbuild-utils": "^0.2.1",
@@ -32,14 +32,14 @@
     "get-port": "^5.1.1",
     "jsdom": "^20.0.2",
     "rimraf": "^3.0.2",
-    "vite-plugin-nightwatch": "0.4.5"
+    "vite-plugin-nightwatch": "^0.4.6"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.4",
     "eslint": "^8.26.0",
     "nightwatch": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vite": "^4.0.4",
-    "@vitejs/plugin-react": "^4.0.4"
+    "vite": "^4.0.4"
   }
 }
